--- a/css/theme2.css
+++ b/css/theme2.css
@@ -205,6 +205,17 @@ div#film {
 	justify-content: center;
 }
 
+.r-thm-tabs {
+	display: grid;
+	grid-template-columns: min-content 1fr min-content min-content min-content;
+}
+.r-thm-tabs .navmenu.disabled img {
+	opacity: .3;
+}
+.r-thm-tabs .navmenu.disabled a:hover {
+	background: unset;
+}
+
 .alb-img-cels {
 	width: 100%;
 	display: grid;
@@ -212,6 +223,7 @@ div#film {
 	justify-content: space-between;
 	justify-items: center;
 	row-gap: 0.5rem;
+	touch-action: pan-x;
 }
 
 .alb-img-cels-f {
@@ -225,8 +237,8 @@ div#film {
 .r-thumbnail {
 	min-width: 140px;
 	text-align: center;
-	width: 100%;
-	height: 100%;
+/*	width: 100%;
+	height: 100%;*/
 }
 
 .image-l {
