--- a/css/theme2.css
+++ b/css/theme2.css
@@ -205,9 +205,7 @@ div#film {
 	justify-content: center;
 }
 
-.r-thm-tabs, .r-alb-tabs {
-/*	display: grid;
-	grid-template-columns: min-content 1fr min-content min-content min-content;*/
+.r-thm-tabs, .r-alb-tabs, .img-nav-bar {
 	display: flex;
 	flex-wrap: wrap;
 }
